--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,11 @@ typing_extensions==4.12.2
 tzdata==2024.1
 websockets==12.0
 yarl==1.10.0
+
+numpy~=2.1.3
+djangorestframework~=3.15.2
+mercadopago~=2.2.3
+cohere~=5.11.1
+sentence-transformers~=3.3.1
+supabase~=2.7.4
+djangorestframework-simplejwt~=5.3.1
